--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css\styles.css"></link>
 
+    <meta name="descripcion" content="Juegos en oferta y gratis en todas las plataformas">
+    <meta name="keywords"  content="juego, oferta, gratis, mediafire, mega, google drive, steam, epic games, origin, battle.net, blizzard, activion, EA, descargar gratis,">
 </head>
 <body id="body">
     <header>
