--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Juegos en oferta</title>
-    <link rel="stylesheet" href="css\TRABAJO.css"></link>
-    <link rel="stylesheet" href="css\BOTONES.css"></link>
+    <link rel="stylesheet" href="../css\TRABAJO.css"></link>
+    <link rel="stylesheet" href="../css\BOTONES.css"></link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css\styles.css"></link>
-
-    <meta name="descripcion" content="Juegos en oferta y gratis en todas las plataformas">
+    <link rel="stylesheet" href="../css\styles.css"></link>
+    <link rel="shortcut icon" type="images/LOGO.ico" href="/LOGO.ico/"></link>
+    <meta name="description" content="Juegos en oferta y gratis en todas las plataformas">
     <meta name="keywords"  content="juego, oferta, gratis, mediafire, mega, google drive, steam, epic games, origin, battle.net, blizzard, activion, EA, descargar gratis,">
 </head>
 <body id="body">
@@ -44,7 +44,7 @@
             <div class="carousel-item">
               <p class="textoAnimado1">Minecraft</p>
               <p class="textoAnimado2">Minecraft es un videojuego de construcción, de tipo «mundo abierto» o sandbox creado originalmente por el sueco Markus Persson, ​ y posteriormente desarrollado por su empresa, Mojang Studios.</p>
-              <img src="images/minecraft.jpg" class="imagenSombra" height="350px" width="800px">
+              <img src="../images/minecraft.jpg" class="imagenSombra" height="350px" width="800px">
               <a href="https://www.minecraft.net/es-es" class="direccion">PAGINA DEL JUEGO</a>
             </div>
           </div>
