--- a/Comunidad.html
+++ b/Comunidad.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comunidad</title>
-  <link rel="stylesheet" href="css/Comunidad.css"></link>
-  <link rel="stylesheet" href="css\TRABAJO.css">
+  <link rel="stylesheet" href="../css/Comunidad.css"></link>
+  <link rel="stylesheet" href="../css/TRABAJO.css">
 </head>
 <body>
   <a href="index.html" class="BOTON">Home</a>
