--- a/Nuevo.html
+++ b/Nuevo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo</title>
-    <link rel="stylesheet" href="css\TRABAJO.css">
+    <link rel="stylesheet" href="../css\TRABAJO.css">
   </link>
 </head>
 <body id="CORRECCION">
