--- a/Steam.html
+++ b/Steam.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steam</title>
-    <link rel="stylesheet" href="C:\Users\tomas\Desktop\index\css\Steam.css"><link>
+    <link rel="stylesheet" href="../css\Steam.css"><link>
 </head>
 <body class="body">
     
