--- a/altosRequisitos.html
+++ b/altosRequisitos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Altos Requsitos</title>
-    <link rel="stylesheet" href="css/requisitosAltos.css"><link>
+    <link rel="stylesheet" href="../css/requisitosAltos.css"><link>
 </head>
 <body class="body">
 
