--- a/bajosRequisitos.html
+++ b/bajosRequisitos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bajos Requisitos</title>
-    <link rel="stylesheet" href="css/requisitosBajos.css"><link>
+    <link rel="stylesheet" href="../css/requisitosBajos.css"><link>
 </head>
 <body class="body">
     
