--- a/mediosRequisitos.html
+++ b/mediosRequisitos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medios Requisitos</title>
-    <link rel="stylesheet" href="css/requisitosMedios.css"><link>
+    <link rel="stylesheet" href="../css/requisitosMedios.css"><link>
 </head>
 <body class="body">
 
