--- a/Oferta.html
+++ b/Oferta.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oferta</title>
-    <link rel="stylesheet" href="../css\TRABAJO.css">
+    <link rel="stylesheet" href="css\TRABAJO.css">
     </link>
 </head>
 <body id="CORRECCION">
-            <a href="index.html" class="BOTON">Home</a>
-            <a href="Steam.html" class="BOTON">Steam</a>
+            <a href="index.html" class="botonIndex">Home</a>
+            <a href="Steam.html" class="botonIndex">Steam</a>
            
         <!--IMAGEN1-->
         <div class="OFERTAS1">
