--- a/bajosRequisitos.html
+++ b/bajosRequisitos.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bajos Requisitos</title>
-    <link rel="stylesheet" href="../css/requisitosBajos.css"><link>
+    <link rel="stylesheet" href="css/requisitosBajos.css"><link>
 </head>
-<body class="body">
+<body class="CORRECCION">
     
-        <a href="index.html" class="BOTON">Home</a>
-        <a href="altosRequisitos.html" class="BOTON">Altos requisitos</a>
-        <a href="mediosRequisitos.html" class="BOTON">Medios requisitos</a>
-        <a href="bajosRequisitos.html" class="BOTON">Bajos requisitos</a>
+        <a href="index.html" class="botonHome1">Home</a>
+        <a href="altosRequisitos.html" class="botonHome1">Altos requisitos</a>
+        <a href="mediosRequisitos.html" class="botonHome1">Medios requisitos</a>
+        <a href="bajosRequisitos.html" class="botonHome1">Bajos requisitos</a>
   
                 <!--IMAGEN1-->
             <div class="OFERTAS1">
@@ -27,11 +27,11 @@
                 <p class="TEXTOTITULO2">Paladins</p>
                 <p class="DESCRIPCION2">Acompaña a más de 25 millones de jugadores en Paladins, el shooter de fantasía gratis basado en equipos. Ejerce tus armas y desata poderes mágicos como un Campeón legendario del Reino. ¡Personaliza tus habilidades para jugar exactamente como prefieras!</p>
                 <!--IMAGEN3-->
-            <div class="OFERTAS3">
+            <div class="OFERTAS33">
                 <img src="images/sdghvchfgh.jpg">
             </div>    
-                <p class="TEXTOTITULO3">Besiege</p>
-                <p class="DESCRIPCION3">Besiege es un juego de construcción basado en la física en el que creas máquinas de asedio medievales para arrasar inmensas fortalezas y apacibles aldeas. Construye una máquina que pueda derribar molinos de viento, eliminar batallones de valientes soldados y transportar preciados recursos, y defiéndela de cañones, arqueros o cualquier...</p>      
+                <p class="TEXTOTITULO33">Besiege</p>
+                <p class="DESCRIPCION33">Besiege es un juego de construcción basado en la física en el que creas máquinas de asedio medievales para arrasar inmensas fortalezas y apacibles aldeas. Construye una máquina que pueda derribar molinos de viento, eliminar batallones de valientes soldados y transportar preciados recursos, y defiéndela de cañones, arqueros o cualquier...</p>      
                  <!--IMAGEN4-->       
             <div class="OFERTAS4">
                 <img src="images/sdgfsdhd.jpg">
