--- a/Nuevo.html
+++ b/Nuevo.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo</title>
-    <link rel="stylesheet" href="../css\TRABAJO.css">
+    <link rel="stylesheet" href="css\Nuevo.css">
+    <link rel="stylesheet" href="css\BOTONES.css">
   </link>
 </head>
 <body id="CORRECCION">
     
-        <a href="index.html"class="BOTON">Home</a>
-        <a href="Steam.html" class="BOTON">Steam</a>
+        <a href="index.html"class="botonHome1">Home</a>
+        <a href="Steam.html" class="botonHome1">Steam</a>
 
         <!--IMAGEN1-->
             <div class="OFERTAS1">
