--- a/altosRequisitos.html
+++ b/altosRequisitos.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Altos Requsitos</title>
-    <link rel="stylesheet" href="../css/requisitosAltos.css"><link>
+    <link rel="stylesheet" href="css/requisitosAltos.css"><link>
 </head>
-<body class="body">
+<body class="CORRECCION">
 
-        <a href="index.html" class="BOTON">Home</a>
-        <a href="altosRequisitos.html" class="BOTON">Altos requisitos</a>
-        <a href="mediosRequisitos.html" class="BOTON">Medios requisitos</a>
-        <a href="bajosRequisitos.html" class="BOTON">Bajos requisitos</a>
+        <a href="index.html" class="botonHome1">Home</a>
+        <a href="altosRequisitos.html" class="botonHome1">Altos requisitos</a>
+        <a href="mediosRequisitos.html" class="botonHome1">Medios requisitos</a>
+        <a href="bajosRequisitos.html" class="botonHome1">Bajos requisitos</a>
         
                 <!--IMAGEN1-->
             <div class="OFERTAS1">
@@ -27,11 +27,11 @@
                 <p class="TEXTOTITULO2">Planetside 2</p>
                 <p class="DESCRIPCION2">PlanetSide 2 es una guerra planetaria total en la que miles de jugadores luchan codo con codo en continentes inmensos. Combina infantería y vehículos terrestres y aéreos para aniquilar a tus enemigos en un shooter en primera persona revolucionario de escala colosal.</p>
                 <!--IMAGEN3-->
-            <div class="OFERTAS3">
+            <div class="OFERTAS33">
                 <img src="images/gjhhk.jpg">
             </div>
-                <p class="TEXTOTITULO3">Generation Zero</p>
-                <p class="DESCRIPCION3">Suecia. 1989. Cuando los habitantes de Östertörn se dan cuenta de que están rodeados de robots que arrasan con todo, vencer es sobrevivir. En solitario o con hasta tres amigos, muévete con sigilo, explora y dispara para abrirte paso en un paraje extenso y variopinto tan enigmático como letal.</p>
+                <p class="TEXTOTITULO33">Generation Zero</p>
+                <p class="DESCRIPCION33">Suecia. 1989. Cuando los habitantes de Östertörn se dan cuenta de que están rodeados de robots que arrasan con todo, vencer es sobrevivir. En solitario o con hasta tres amigos, muévete con sigilo, explora y dispara para abrirte paso en un paraje extenso y variopinto tan enigmático como letal.</p>
                 <!--IMAGEN4-->       
             <div class="OFERTAS4">
                 <img src="images/fhggfh.jpg">
