--- a/mediosRequisitos.html
+++ b/mediosRequisitos.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medios Requisitos</title>
-    <link rel="stylesheet" href="../css/requisitosMedios.css"><link>
+    <link rel="stylesheet" href="css/requisitosMedios.css"><link>
 </head>
-<body class="body">
+<body class="CORRECCION">
 
-        <a href="index.html" class="BOTON">Home</a>
-        <a href="altosRequisitos.html" class="BOTON">Altos requisitos</a>
-        <a href="mediosRequisitos.html" class="BOTON">Medios requisitos</a>
-        <a href="bajosRequisitos.html" class="BOTON">Bajos requisitos</a>
+        <a href="index.html" class="botonHome1">Home</a>
+        <a href="altosRequisitos.html" class="botonHome1">Altos requisitos</a>
+        <a href="mediosRequisitos.html" class="botonHome1">Medios requisitos</a>
+        <a href="bajosRequisitos.html" class="botonHome1">Bajos requisitos</a>
 
                  <!--IMAGEN1-->
             <div class="OFERTAS1">
@@ -27,11 +27,11 @@
                 <p class="TEXTOTITULO2">Splitgate: Arena Warfare</p>
                 <p class="DESCRIPCION2">Splitgate: Arena Warfare es un juego multiplayer de disparos a rápido ritmo que utiliza portales controlados por jugadores para crear una nueva dimensión del combate en la arena. IGN describe Splitgate como "Halo fusionado con Portal."</p>
                  <!--IMAGEN3-->
-            <div class="OFERTAS3">
+            <div class="OFERTAS33">
                 <img src="images/sdghgjjo.jpg">
             </div>
-                <p class="TEXTOTITULO3">Space Engineers</p>
-                <p class="DESCRIPCION3">Space Engineers es un juego de sandbox de mundo abierto definido por la creatividad y la exploración.Los jugadores construyen naves espaciales, estaciones espaciales, puestos avanzados planetarios de varios tamaños y usos, pilotan naves y viajan a través del espacio para explorar planetas y reunir recursos para sobrevivir. Con modos creativos y de supervivencia, no hay límite para lo que se puede construir, utilizar y explorar. Space Engineers presenta un motor de física realista y volumétrico: todo en el juego se puede ensamblar, desmontar, dañar y destruir.</p>
+                <p class="TEXTOTITULO33">Space Engineers</p>
+                <p class="DESCRIPCION33">Space Engineers es un juego de sandbox de mundo abierto definido por la creatividad y la exploración.Los jugadores construyen naves espaciales, estaciones espaciales, puestos avanzados planetarios de varios tamaños y usos, pilotan naves y viajan a través del espacio para explorar planetas y reunir recursos para sobrevivir. Con modos creativos y de supervivencia, no hay límite para lo que se puede construir, utilizar y explorar. Space Engineers presenta un motor de física realista y volumétrico: todo en el juego se puede ensamblar, desmontar, dañar y destruir.</p>
                  <!--IMAGEN4-->
             <div class="OFERTAS4">
                 <img src="images/fsgdry.jpg">
