--- a/Oferta.html
+++ b/Oferta.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css\TRABAJO.css">
     </link>
 </head>
-<body id="CORRECCION">
+<body class="CORRECCION">
             <a href="index.html" class="botonIndex">Home</a>
             <a href="Steam.html" class="botonIndex">Steam</a>
            
