--- a/Comunidad.html
+++ b/Comunidad.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/TRABAJO.css">
 </head>
 <body>
-  <a href="index.html" class="BOTON">Home</a>
+  <a href="index.html" class="botonIndex">Home</a>
   <div class="container">
     <div class="row">
         <h1>Reporte</h1>
