--- a/Oferta.html
+++ b/Oferta.html
@@ -10,9 +10,13 @@
     </link>
 </head>
 <body class="CORRECCION">
+    <header>
+        <nav>
             <a href="index.html" class="botonIndex">Home</a>
             <a href="Steam.html" class="botonIndex">Steam</a>
-           
+        </nav>
+    </header>
+    <main>
         <!--IMAGEN1-->
         <div class="OFERTAS1">
             <img src="images/gdtyjtyi.jpg">
@@ -45,7 +49,7 @@
                 del galardonado Left 4 Dead, el juego cooperativo número 1 de 2008. Este FPS cooperativo de acción y
                 terror os llevará a ti y a tus amigos por las ciudades, pantanos y cementerios del Sur Profundo, desde
                 Savannah hasta Nueva Orleans, a lo largo de cinco...</p>
-
+    </main>
 </body>
 
 </html>
