--- a/altosRequisitos.html
+++ b/altosRequisitos.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="css/requisitosAltos.css"><link>
 </head>
 <body class="CORRECCION">
-
+    <header>
+      <nav>
         <a href="index.html" class="botonHome1">Home</a>
         <a href="altosRequisitos.html" class="botonHome1">Altos requisitos</a>
         <a href="mediosRequisitos.html" class="botonHome1">Medios requisitos</a>
         <a href="bajosRequisitos.html" class="botonHome1">Bajos requisitos</a>
-        
+     </nav>
+    </header>
+    <main>
                 <!--IMAGEN1-->
             <div class="OFERTAS1">
                 <img src="images/34563e4arzdtg.jpg">
@@ -38,6 +41,6 @@
             </div>
                 <p class="TEXTOTITULO4">No Man's Sky</p>
                 <p class="DESCRIPCION4">No Man's Sky es un juego de ciencia ficción sobre exploración y supervivencia en un universo infinito generado de forma procedimental.</p>
-            
+         </main>   
 </body>
 </html>
