--- a/mediosRequisitos.html
+++ b/mediosRequisitos.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="css/requisitosMedios.css"><link>
 </head>
 <body class="CORRECCION">
-
+    <header>
+        <nav>
         <a href="index.html" class="botonHome1">Home</a>
         <a href="altosRequisitos.html" class="botonHome1">Altos requisitos</a>
         <a href="mediosRequisitos.html" class="botonHome1">Medios requisitos</a>
         <a href="bajosRequisitos.html" class="botonHome1">Bajos requisitos</a>
-
+        </nav>
+</header>
+    <main>
                  <!--IMAGEN1-->
             <div class="OFERTAS1">
                 <img src="images/dsweratg.jpg">
@@ -38,7 +41,7 @@
             </div>
                 <p class="TEXTOTITULO4">Age of Empires II: Definitive Edition</p>
                 <p class="DESCRIPCION4">Age of Empires II: Definitive Edition celebra el 20.º aniversario de uno de los juegos de estrategia más populares de la historia con increíbles gráficos 4K Ultra HD, una nueva banda sonora totalmente remasterizada y la expansión “Los últimos kanes”, que cuenta con 3 nuevas campañas y 4 nuevas civilizaciones.</p>
-                        
+    </main>          
     </fieldset>
 </body>
 </html>
