--- a/Oferta.html
+++ b/Oferta.html
@@ -1,55 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oferta</title>
-    <link rel="stylesheet" href="css\TRABAJO.css">
-    </link>
+    <meta charset="UTF-8">
+    <title>Juegos en oferta</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css\footer.css"><link>
 </head>
-<body class="CORRECCION">
-    <header>
-        <nav>
-            <a href="index.html" class="botonIndex">Home</a>
-            <a href="Steam.html" class="botonIndex">Steam</a>
-        </nav>
-    </header>
-    <main>
-        <!--IMAGEN1-->
-        <div class="OFERTAS1">
-            <img src="images/gdtyjtyi.jpg">
-        </div>
-            <p class="TEXTOTITULO1">Totally Accurate Battle Simulator</p>
-            <p class="DESCRIPCION1">Be the leader of wobblers from ancient lands, spooky places, and fantasy worlds. Watch
-                them fight in simulations made with the wobbliest physics system ever created, make your own wobblers in the
-                unit creator and send your army off to fight your friends in multiplayer.</p>
-        <!--IMAGEN2-->            
-        <div class="OFERTAS2">
-            <img src="images/fghd.jpg">
-        </div>
-            <p class="TEXTOTITULO2">Rust</p>
-            <p class="DESCRIPCION2">The only aim in Rust is to survive. Everything wants you to die - the island’s wildlife
-                and other inhabitants, the environment, other survivors. Do whatever it takes to last another night.</p>
-        <!--IMAGEN3-->
-        <div class="OFERTAS3">
-            <img src="images/ggyytguf.jpg">
-        </div>
-            <p class="TEXTOTITULO3">The Witcher 3: Wild Hunt</p>
-            <p class="DESCRIPCION3">Mientras la guerra se extiende por los Reinos del Norte, aceptarás el contrato de tu
-                vida: encontrar a la niña de la profecía, un arma viviente que puede alterar el mundo tal y como lo
-                conocemos.</p>
-        <!--IMAGEN4-->
-        <div class="OFERTAS4">
-            <img src="images/zdgf.jpg">
-        </div>
-            <p class="TEXTOTITULO4">Left 4 Dead 2</p>
-            <p class="DESCRIPCION4">Ambientado en el apocalipsis zombi, Left 4 Dead 2 (L4D2) es la esperadísima secuela
-                del galardonado Left 4 Dead, el juego cooperativo número 1 de 2008. Este FPS cooperativo de acción y
-                terror os llevará a ti y a tus amigos por las ciudades, pantanos y cementerios del Sur Profundo, desde
-                Savannah hasta Nueva Orleans, a lo largo de cinco...</p>
-    </main>
-</body>
+<body>
+<header>
+  <nav class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Juegos que estan en oferta</h1>
+      <p class="lead text-muted">Estos son algunos de los juegos de steam con muy buena comunidad como en el in game</p>
+      <p>
+        <a href="requisitosAltos.html" class="btn btn-primary my-2">Altos requisitos</a>
+        <a href="requisitosMedios.html" class="btn btn-secondary my-2">Medios requisitos</a>
+        <a href="requisitosBajos.html" class="btn btn-primary my-2">Bajos requisitos</a>
+      </p>
+    </div>
+  </nav>
+</header>
+<main role="main">
+  <div class="album py-5 bg-light">
+    <div class="container">
 
-</html>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" img src="images/dfhlñ.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">¡Sumérgete en la enigmática atmósfera de Little Nightmares y enfréntate a los miedos de tu infancia! Ayuda a Seis a escapar de Las Fauces, un misterioso navío donde moran ánimas corrompidas en busca de su próxima comida...</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/sdgh.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">El emblemático viaje del Jefe Maestro incluye seis juegos creados para PC y recopilados en una sola experiencia. Ya seas un seguidor de toda la vida o descubras al Spartan 117 por primera vez, la colección Jefe Maestro te resultará la experiencia de juego definitiva de Halo.</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/SPACE ENGINERS.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Space Engineers es un juego de sandbox de mundo abierto definido por la creatividad y la exploración.</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer class="text-muted">
+        <div id="container">
+          <div id="part1">
+              <div id="companyinfo"> <a id="sitelink" href="#">Home</a>
+                  <p id="title">Una pagina de juegos</p>
+                  <p id="detail">Soy un creador o desarrollador web simple que le gusta lo que hace y ese es su primer proyecto</p>
+              </div>
+              <div id="explore">
+                <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
+            </div>
+              <div id="legal">
+                  <p id="txt3">Terminos o "legal"</p> <a class="link1" href="#">Terminos y condiciones</a> <a class="link1" href="#">Politica y privacidad</a>
+              </div>
+            </div>
+          <div id="part2">
+              <p id="txt6">copyright 2021 tomi_web - Derechos reservados</p>
+          </div>
+      </div>
+      </footer>
+      </body>
