--- a/Steam.html
+++ b/Steam.html
@@ -1,46 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steam</title>
-    <link rel="stylesheet" href="css\Steam.css"><link>
+    <meta charset="UTF-8">
+    <title>Juegos en oferta</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css\footer.css"><link>
 </head>
-<body class="body">
-    <header>
-        <nav>
-        <a href="index.html" class="botonHome1">Home</a>
-        <a href="altosRequisitos.html" class="botonHome2">Altos requisitos</a>
-        <a href="mediosRequisitos.html" class="botonHome3">Medios requisitos</a>
-        <a href="bajosRequisitos.html" class="botonHome4">Bajos requisitos</a>
-        </nav>
-    </header>
-        <main>
-                <!--IMAGEN1-->
-            <div class="OFERTAS1">
-                <img src="images/tgfhfy.PNG">
+<body>
+<header>
+  <nav class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Juegos de Steam Muy buenos</h1>
+      <p class="lead text-muted">Estos son algunos de los juegos de steam con muy buena comunidad como en el in game</p>
+      <p>
+        <a href="requisitosAltos.html" class="btn btn-primary my-2">Altos requisitos</a>
+        <a href="requisitosMedios.html" class="btn btn-secondary my-2">Medios requisitos</a>
+        <a href="requisitosBajos.html" class="btn btn-primary my-2">Bajos requisitos</a>
+      </p>
+    </div>
+  </nav>
+</header>
+<main role="main">
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" img src="images/tgfhfy.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">El popular y estrafalario "juego idle que no quieres dejar de jugar". Explora, craftea, junta y administra recursos, encuentra tesoros y secretos y construye tu base desde la nada! ¡Compra tierras para explorar y expandirte!</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-                <p class="TEXTOTITULO1">Forager</p>
-                <p class="DESCRIPCION1">El popular y estrafalario "juego idle que no quieres dejar de jugar". Explora, craftea, junta y administra recursos, encuentra tesoros y secretos y construye tu base desde la nada! ¡Compra tierras para explorar y expandirte!</p>
-                <!--IMAGEN2-->
-            <div class="OFERTAS2">
-                <img src="images/hgyt.PNG">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/hgyt.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Fight upon the Ravenfield together with your Blue allies! Take down those pesky Reds using helicopters, tanks, guns, and active ragdoll physics!</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-                <p class="TEXTOTITULO2">REVENFIELD</p>
-                <p class="DESCRIPCION2">Fight upon the Ravenfield together with your Blue allies! Take down those pesky Reds using helicopters, tanks, guns, and active ragdoll physics!</p>
-                <!--IMAGEN3-->
-            <div class="OFERTAS3">
-                <img src="images/SPACE ENGINERS.PNG">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/SPACE ENGINERS.PNG" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Space Engineers es un juego de sandbox de mundo abierto definido por la creatividad y la exploración.</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-                <p class="TEXTOTITULO3">Space Engineers</p>
-                <p class="DESCRIPCION3">Space Engineers es un juego de sandbox de mundo abierto definido por la creatividad y la exploración</p>
-                 <!--IMAGEN4-->     
-            <div class="OFERTAS4">
-                <img src="images/conter strike.PNG">
+          </div>
+        </div>
+      </main>
+      <footer class="text-muted">
+        <div id="container">
+          <div id="part1">
+              <div id="companyinfo"> <a id="sitelink" href="#">Home</a>
+                  <p id="title">Una pagina de juegos</p>
+                  <p id="detail">Soy un creador o desarrollador web simple que le gusta lo que hace y ese es su primer proyecto</p>
+              </div>
+              <div id="explore">
+                <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
             </div>
-                <p class="TEXTOTITULO4">Counter-Strike: Global Offensive</p>
-                <p class="DESCRIPCION4">Counter-Strike: Global Offensive (CS: GO) ampliará la jugabilidad de acción por equipos que fue pionera en su lanzamiento hace 12 años. CS: GO incluirá nuevos mapas, personajes y armas y ofrecerá versiones actualizadas del contenido clásico de CS (de_dust2, etc.).</p>
-          </main>      
-</body>
-</html>
+              <div id="legal">
+                  <p id="txt3">Terminos o "legal"</p> <a class="link1" href="#">Terminos y condiciones</a> <a class="link1" href="#">Politica y privacidad</a>
+              </div>
+            </div>
+          <div id="part2">
+              <p id="txt6">copyright 2021 tomi_web - Derechos reservados</p>
+          </div>
+      </div>
+      </footer>
+      </body>
