--- a/Comunidad.html
+++ b/Comunidad.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="css/TRABAJO.css">
 </head>
 <body>
+  <header>
+    <nav>
   <a href="index.html" class="botonIndex">Home</a>
+    </nav>
+  </header>
+  <main>
   <div class="container">
     <div class="row">
         <h1>Reporte</h1>
@@ -47,5 +52,6 @@
         </div>
     </div>
   </div>
+ </main> 
 </body>
 </html>
