--- a/Nuevo.html
+++ b/Nuevo.html
@@ -1,46 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuevo</title>
-    <link rel="stylesheet" href="css\Nuevo.css">
-    <link rel="stylesheet" href="css\BOTONES.css">
-  </link>
+    <meta charset="UTF-8">
+    <title>Juegos en oferta</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css\footer.css"><link>
 </head>
-<body id="CORRECCION">
-  <header>
-    <nav>
-        <a href="index.html"class="botonHome1">Home</a>
-        <a href="Steam.html" class="botonHome1">Steam</a>
-    </nav>
-  </header>
-  <main>
-        <!--IMAGEN1-->
-            <div class="OFERTAS1">
-                <img src="images/dfagt.jpg">
+<body>
+<header>
+  <nav class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">Juegos nuevos</h1>
+      <p class="lead text-muted">Estos son algunos de los juegos de steam con muy buena comunidad como en el in game</p>
+      <p>
+        <a href="requisitosAltos.html" class="btn btn-primary my-2">Altos requisitos</a>
+        <a href="requisitosMedios.html" class="btn btn-secondary my-2">Medios requisitos</a>
+        <a href="requisitosBajos.html" class="btn btn-primary my-2">Bajos requisitos</a>
+      </p>
+    </div>
+  </nav>
+</header>
+<main role="main">
+  <div class="album py-5 bg-light">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" img src="images/afgkcguk.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">¡Sumérgete en la enigmática atmósfera de Little Nightmares y enfréntate a los miedos de tu infancia! Ayuda a Seis a escapar de Las Fauces, un misterioso navío donde moran ánimas corrompidas en busca de su próxima comida...</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-              <p class="TEXTOTITULO1">Century: Age of Ashes</p>
-              <p class="DESCRIPCION1">Century: Age of Ashes es un shooter gratuito online donde montas dragones en batallas en equipo de 6v6. Mejora tus habilidades con diferentes clases y dragones, compite en intensas batallas en coliseos y domina los cielos con tu equipo en frenéticos combates aéreos.</p>
-        <!--IMAGEN2-->  
-            <div class="OFERTAS2">
-                <img src="images/fgjfghfyufy.jpg">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/fgjfghfyufy.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">Lucha contra hordas de monstruos enloquecidos junto a tus amigos o en solitario para lograr escapar de un planeta alienígena sumido en el caos. Combina el botín de maneras asombrosas y domina cada personaje hasta encarnar la destrucción que tanto te aterraba tras tu primer aterrizaje forzoso.</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-              <p class="TEXTOTITULO2">Risk of Rain 2</p>
-              <p class="DESCRIPCION2">Lucha contra hordas de monstruos enloquecidos junto a tus amigos o en solitario para lograr escapar de un planeta alienígena sumido en el caos. Combina el botín de maneras asombrosas y domina cada personaje hasta encarnar la destrucción que tanto te aterraba tras tu primer aterrizaje forzoso.</p>
-        <!--IMAGEN3-->
-            <div class="OFERTAS33">
-               <img src="images/sdfh.jpg">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="images/sdfh.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="card-text">ICARUS es un juego de supervivencia JcE por sesiones para hasta 8 jugadores en modo cooperativo o individual. Explora una terraformación fallida. Sobrevive para extraer materia exótica y regresa a la órbita para crear tecnologías más avanzadas para tu misión siguiente.</p>
+              <div class="d-flex justify-content-between align-items-center">
+              </div>
             </div>
-              <p class="TEXTOTITULO33">ICARUS</p>
-              <p class="DESCRIPCION33">ICARUS es un juego de supervivencia JcE por sesiones para hasta 8 jugadores en modo cooperativo o individual. Explora una terraformación fallida. Sobrevive para extraer materia exótica y regresa a la órbita para crear tecnologías más avanzadas para tu misión siguiente.</p>
-        <!--IMAGEN4-->     
-            <div class="OFERTAS4">
-                <img src="images/afgkcguk.jpg">
-            </div>        
-              <p class="TEXTOTITULO4">Taur</p>
-              <p class="DESCRIPCION4">Taur es un juego de acción y estrategia de ciencia ficción. Controla el primer cañón y desbloquea todas sus poderosas armas y habilidades. Construye torretas, droides, aviones y más mientras luchas para proteger el mundo natal de los droides Tauron contra una invasión implacable. ¿Tu Taur se enfrentará a la máquina de guerra Imperion?</p>
-      </main>           
-</body>
-</html>
+          </div>
+        </div>
+      </main>
+      <footer class="text-muted">
+        <div id="container">
+          <div id="part1">
+              <div id="companyinfo"> <a id="sitelink" href="#">Home</a>
+                  <p id="title">Una pagina de juegos</p>
+                  <p id="detail">Soy un creador o desarrollador web simple que le gusta lo que hace y ese es su primer proyecto</p>
+              </div>
+              <div id="explore">
+                <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
+            </div>
+              <div id="legal">
+                  <p id="txt3">Terminos o "legal"</p> <a class="link1" href="#">Terminos y condiciones</a> <a class="link1" href="#">Politica y privacidad</a>
+              </div>
+            </div>
+          <div id="part2">
+              <p id="txt6">copyright 2021 tomi_web - Derechos reservados</p>
+          </div>
+      </div>
+      </footer>
+      </body>
