--- a/Oferta.html
+++ b/Oferta.html
@@ -69,6 +69,14 @@
               <div id="explore">
                 <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
             </div>
+              <div id="visit">
+                  <p id="txt2">Que se muestra:</p>
+                  <p class="text">Juegos de altos requisitos </p>
+                  <p class="text">Juegos de medios requisitos</p>
+                  <p class="text">Juegos de requisitos</p>
+                  <p class="text">Tambien de epic y steam</p>
+                  <p class="text">Y noticias en general</p>
+              </div>
               <div id="legal">
                   <p id="txt3">Terminos o "legal"</p> <a class="link1" href="#">Terminos y condiciones</a> <a class="link1" href="#">Politica y privacidad</a>
               </div>
