--- a/Nuevo.html
+++ b/Nuevo.html
@@ -67,8 +67,16 @@
                   <p id="detail">Soy un creador o desarrollador web simple que le gusta lo que hace y ese es su primer proyecto</p>
               </div>
               <div id="explore">
-                <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
-            </div>
+                  <p id="txt1">Explorar</p> <a class="link" href="index.html">Home</a> <a class="link" href="Steam.html">Steam</a> <a class="link" href="Nuevo.html">Nuevo</a> <a class="link" href="Oferta.html">Oferta</a>
+              </div>
+              <div id="visit">
+                  <p id="txt2">Que se muestra:</p>
+                  <p class="text">Juegos de altos requisitos </p>
+                  <p class="text">Juegos de medios requisitos</p>
+                  <p class="text">Juegos de requisitos</p>
+                  <p class="text">Tambien de epic y steam</p>
+                  <p class="text">Y noticias en general</p>
+              </div>
               <div id="legal">
                   <p id="txt3">Terminos o "legal"</p> <a class="link1" href="#">Terminos y condiciones</a> <a class="link1" href="#">Politica y privacidad</a>
               </div>
@@ -79,3 +87,4 @@
       </div>
       </footer>
       </body>
+      </html>
