--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 <h1 class=" display-4  text-light mb-2 mt-5"><strong>Juegos gratis y ofertas</strong> </h1>
                 <p class="lead  text-light mb-5">Una pagina divertida</p>
                 <div class="btn-container-wrapper p-relative d-block  zindex-1">
-                    <a class="btn btn-outline-light border-0 btn-lg pr-2 pl-2 pt-3 pb-3  mt-md-5  scroll align-self-center  " href="#section-1">
               <i class="fa fa-angle-down fa-2x  "></i>
                     </a>
                 </div>
@@ -179,4 +178,5 @@
       
   
 
-</body></html>
+</body>
+</html>
